--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.27.2",
     "bootstrap": "^4.4.1",
+    "html2canvas": "^1.4.1",
     "material-table": "^1.69.3",
     "node-sass": "^7.0.1",
     "react": "^16.13.1",
