--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,13 @@
     "canvg": "^4.0.1",
     "dompurify": "^2.3.10",
     "html2canvas": "^1.4.1",
-    "material-table": "^1.69.3",
+    "material-table": "^1.63.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.0.0",
     "sass": "^1.54.3"
   },
